Integrate the pager + fix views width on mobile

--- a/web/themes/custom/kull/css/main.css
+++ b/web/themes/custom/kull/css/main.css
@@ -204,6 +204,10 @@ h1 {
   .news-publish-infos-container {
     font-size: 0.7em;
   }
+
+  .news-publish-infos {
+    padding-left: 10px;
+  }
 }
 
 /** Header **/
@@ -789,8 +793,42 @@ h1 {
   margin: 0 0 15px 15px;
 }
 
+.pager {
+  margin: 20px 0;
+}
+
+.pager__items {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  list-style: none;
+  align-items: center;
+  justify-content: center;
+}
+
+.pager__item a {
+  padding: 8px 16px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 4px;
+  border: 1px solid #cccccc;
+}
+
+.pager__item:not(.is-active) a:hover {
+  background-color: #cccccc;
+}
+
+.pager__item a:hover {
+  text-decoration: none;
+}
+
+.pager__item.is-active a {
+  background-color: #111820;
+  color: white;
+}
+
 @media only screen and (max-width: 699px) {
-  .breadcrumb, .page-title-block, .main-content-block {
+  .breadcrumb, .page-title-block, .field-body-full {
     padding-left: 10px;
     padding-right: 10px;
   }
